[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/pause/pause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ResumeButton" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -8.0
margin_right = 88.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 120, 8 )
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="SettingsButton" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 80.0
margin_right = 88.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 176.0
margin_right = 88.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="ConfirmSettings" type="ConfirmationDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -46.0
margin_right = 100.0
margin_bottom = 46.0
window_title = "Warning"
dialog_text = "Are you sure you want to go to settings? By doing this, you will leave the game."
dialog_autowrap = true

[node name="ConfirmQuit" type="ConfirmationDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.5
margin_top = -35.0
margin_right = 204.5
margin_bottom = 35.0
window_title = "Warning"
dialog_text = "Are you sure you want to leave? All your progress will be lost."

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="confirmed" from="ConfirmSettings" to="." method="_on_confirm_settings_confirmed"]
[connection signal="confirmed" from="ConfirmQuit" to="." method="_on_confirm_quit_confirmed"]
